# dotfiles

./: .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  NixOS-Configuration-Unification-Plan.md  NixOS-chris-improvement-report.md  README-nixos.md  README.md  Xresources  _ripgrep_ignore  _zimrc  _zshrc  alacritty.yml  arch_install.sh  bashrc  biome.json  calligraphy-sheet.html  configuration-x1carbon-9gen.nix  configuration.nix  denis-crontab  dennich.nix  flake.nix  gitignore_global  hardware-configuration-x1carbon-9gen.nix  hardware-configuration.nix  home-anton.nix  home.nix  init.vim  mise.toml  newsletters.yml  nixos_install.sh  no-clown-fiesta.yaml  requirements-dev.txt  ripgrep_ignore  ruff.toml  stylua.toml  test-awesome.lua  test-init.lua  tmux.conf  (+11 more)
.claude/: settings.local.json
X/: .xinitrc
_archive/: arch_install.sh
_gmail/: newsletters.yml
alacritty/: alacritty.yml
awesome/: rc.lua
ay_bin/: bqprint  bqquery  bqshow  get_table_schema.py  toggle_batch  update_tables.py
aydev_/: bigquery.py  check_bigquery_syntax.py  sq_snapshots.py
configs/: .tmux.conf  _ripgrep_ignore  _zshrc  nom.yaml
convo/: go.mod  main.go
fix-python/: libs.nix
hm/: ben.nix  home-sam.nix  home.nix  sam.nix  server-base.nix
i3/: config
install-scripts/: go.sh
lf/: lfrc
python-packages/dennich/: .envrc  Makefile  README.md  alembic.ini  client.go  dev-requirements.txt  fetch-bigquery-schema.py  flake.nix  go.mod  go.sum  main.go  main_test.go  models.go  pyproject.toml  server.go
python-packages/dennich/migrations/: 2023-11-12-add-tags.sql  migrate_todos.py
python-packages/dennich/scripts/: dennich-audio-diary  rec  test.sh
python-packages/dennich/src/dennich/: convert_audio.py  transcribe_audio.py
python-packages/dennich/src/dennich/danki/: main.py  search.py
python-packages/dennich/src/dennich/migrations/: env.py
python-packages/dennich/src/dennich/migrations/versions/: ecfed9e22211_add_index_on_created_at.py
python-packages/dennich/src/dennich/todo/: config.py  main.py  models.py  report.py  select.py
python-packages/dennich/src/dennich/todo/cmd/: today_status.py
python-packages/dennich/src/dennich/todo/pomodoro/: cli.py  client.py  fastapi_server.py  httpx_client.py  notifications.py  server.py  service.py
python-packages/dennich/tests/: main_test.py
python-packages/dennich/tests/todo/: models_test.py
python-packages/dennich/tests/todo/pomodoro/: test_fastapi_integration.py  test_health_check.py  test_nagging_system.py  test_pomodoro_completion.py  test_pomodoro_service.py  test_pomodoro_service_with_db.py
(+352 files in other folders)
