[project]
name = "dennich"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anki>=24.6.3",
    "markdownify>=0.13.1",
    "openai",
    "polars>=1.12.0",
    "pydantic>=2.9.2",
    "rich>=13.9.3",
    "sqlalchemy",
    "structlog",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.29.0",
    "mypy",
    "pytest>=8.3.3",
]

[project.scripts]
dennich-todo = "dennich.todo.main:main"
dennich-danki = "dennich.danki.main:cli"
dennich-convert-audio = "dennich.convert_audio:main"
dennich-pomodoro = "dennich.todo.pomodoro.cli:main"
dennich-transcribe-audio = "dennich.transcribe_audio:main"

[build-system]
requires = ["uv-build>=0.4.15,<5"]
build-backend = "uv_build"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["markdownify"]
ignore_missing_imports = true
