[project]
name = "dennich"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anki>=24.6.3",
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "markdownify>=0.13.1",
    "polars>=1.12.0",
    "pydantic>=2.9.2",
    "rich>=13.9.3",
    "sqlalchemy",
    "structlog",
    "uvicorn>=0.35.0",
]

[tool.uv]
dev-dependencies = [
    "alembic>=1.15.1",
    "ipython>=8.29.0",
    "mypy",
    "pytest>=8.3.3",
    "pytest-asyncio>=1.0.0",
]

[project.scripts]
dennich-todo = "dennich.todo.main:main"
dennich-danki = "dennich.danki.main:cli"
dennich-pomodoro = "dennich.todo.pomodoro.cli:main"

[build-system]
requires = ["uv-build>=0.4.15,<5"]
build-backend = "uv_build"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["markdownify"]
ignore_missing_imports = true
